cluster/apps/forwards/cv/endpoint.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: cv
  namespace: forwards
subsets:
- addresses:
  - ip: 192.168.0.103
  ports:
  - name: webui
    port: 30000
    protocol: TCP
