cluster/apps/forwards/cv/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: cv
  namespace: forwards
spec:
  ports:
  - name: webui
    port: 80
    protocol: TCP
    targetPort: 30000
  type: ClusterIP
